[EDELIVERY-8548] fix alerts page layout to support expanding and collapsing of filter and columns areas

--- a/Domibus-MSH-angular/src/app/common/grid-header/grid-header.component.css
+++ b/Domibus-MSH-angular/src/app/common/grid-header/grid-header.component.css
@@ -1,7 +1,8 @@
 .group-filter-button {
   position: relative;
+  /*width: 200px;*/
   margin-bottom: 20px;
-  margin-left: 10px;
+  margin-left: 0px;
   padding-top: 5px;
 }
 
@@ -14,7 +15,8 @@
 }
 
 .group-2 .row-limiter {
-  flex: auto;
+  width: 200px;
+  /*flex: auto;*/
 }
 
 .group-filter-button .column-filter-button a.hide-show-column {
